# SNUintern_DAMSA

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  HISTORY  README  configure  runconfigure_gcc12_pc18  runconfigure_goa  runconfigure_lcg104_lxplus  runconfigure_lcg104_pc18
examples/: CMakeLists.txt  configure
examples/Damsa/: ActionInitialization.hh  ActionInitializations.cc  Damsa.mac  DarkMatterPhysicsConfigure.cc  DetectorConstruction.cc  DetectorConstruction.hh  EventAction.cc  EventAction.hh  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.hh  README  Report.txt  RunAction.cc  RunAction.hh  SteppingActionDMG4.cc  SteppingActionDMG4.hh  cardg.g4mac  mkgeant4  mkgeant4.cc  rootmacro.c  rootmacro2_extract_alp_time.C  rootmacro3_signal.c  rootmacro4_test.c  rootmacro5_DirectPhoton.c
examples/Damsa/output/: alp_time_data.py
examples/example1/: README  histresults.C  mkgeant4.cc
examples/example1022/: DarkMatterPhysicsConfigure.cc
examples/testAnnihilationCS/: README.md  mkgeant4.cc  runconfigure_roothisto
examples/testCS/: DarkAxialsSigmaTotETL.inc  DarkPhotonsSigmaTotETL.inc  DarkPseudoScalarsSigmaTotETL.inc  DarkScalarsSigmaTotETL.inc  README  mkgeant4.cc  mkgeant4.cc.template
include/: ALP.hh  DarkAxials.hh  DarkAxialsAnnihilation.hh  DarkMassSpin2.hh  DarkMassSpin2Annihilation.hh  DarkMatter.hh  DarkMatterAnnihilation.hh  DarkMatterSampler.hh  DarkMuPhilicPseudoScalars.hh  DarkMuPhilicScalars.hh  DarkPhotons.hh  DarkPhotonsAnnihilation.hh  DarkPseudoScalars.hh  DarkPseudoScalarsAnnihilation.hh  DarkScalars.hh  DarkScalarsAnnihilation.hh  DarkVector.hh  DarkZ.hh  DarkZAnnihilation.hh
include/DMG4/: AnnihilationStepLimiter.hh  DMStepLimiter.hh  DarkMatterParametersFactory.hh  DarkMatterPhysics.hh
include/DMG4/DMParticles/: DMParticle.hh  DMParticleALP.hh  DMParticleAPrime.hh  DMParticleAxial.hh  DMParticleChi.hh  DMParticleChi1.hh  DMParticleChi2.hh  DMParticleChiScalar.hh  DMParticlePseudoScalar.hh  DMParticleScalar.hh  DMParticleZPrime.hh
include/DMG4/DMProcesses/: DMProcessAnnihilation.hh  G4iDM3bodyDecayChannel.hh
include/UtilsDM/: DarkMatterParametersRegistry.hh  Utils.hh
modules_cmake_standalone/: FindDMG4.cmake  FindROOT.cmake
src/DMG4/: AnnihilationStepLimiter.cc  DarkMatterParametersFactory.cc  DarkMatterPhysics.cc  DarkMatterPhysicsConfigure.cc  DarkMatterPhysicsConfigureWithPars.cc
src/DMG4/DMParticles/: DMParticleALP.cc  DMParticleAPrime.cc  DMParticleAxial.cc  DMParticleChi.cc  DMParticleChi1.cc  DMParticleChi2.cc  DMParticleChiScalar.cc  DMParticlePseudoScalar.cc  DMParticleScalar.cc  DMParticleZPrime.cc
src/DMG4/DMProcesses/: DMProcessAnnihilation.cc  DMProcessDMBrem.cc  DMProcessPrimakoffALP.cc  G4iDM3bodyDecayChannel.cc
src/DarkMatter/: ALP.cc  DarkAxials.cc  DarkAxialsAnnihilation.cc  DarkMassSpin2.cc  DarkMassSpin2Annihilation.cc  DarkMatter.cc  DarkMatterAnnihilation.cc  DarkMuPhilicPseudoScalars.cc  DarkMuPhilicScalars.cc  DarkPhotons.cc  DarkPhotonsAnnihilation.cc  DarkPseudoScalars.cc  DarkPseudoScalarsAnnihilation.cc  DarkScalars.cc  DarkScalarsAnnihilation.cc  DarkVector.cc  DarkZ.cc  DarkZAnnihilation.cc
src/UtilsDM/: DarkMatterParametersRegistry.cc  acoth.cc
